Bug 182659 - AX: Accessibility is not notified when a web process cancels the suspension
Summary: AX: Accessibility is not notified when a web process cancels the suspension
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Accessibility (show other bugs)
Version: WebKit Nightly Build
Hardware: All All
: P2 Normal
Assignee: Nobody
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2018-02-09 15:36 PST by Nan Wang
Modified: 2018-02-09 17:46 PST (History)
6 users (show)

See Also:


Attachments
patch (1.60 KB, patch)
2018-02-09 15:44 PST, Nan Wang
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Nan Wang 2018-02-09 15:36:22 PST
We were sending notification when web process becomes suspended or resumed, but not when the suspension is canceled.

<rdar://problem/37267197>
Comment 1 Nan Wang 2018-02-09 15:44:29 PST
Created attachment 333528 [details]
patch
Comment 2 chris fleizach 2018-02-09 15:49:14 PST
Comment on attachment 333528 [details]
patch

lgtm
Comment 3 WebKit Commit Bot 2018-02-09 17:46:08 PST
Comment on attachment 333528 [details]
patch

Clearing flags on attachment: 333528

Committed r228350: <https://trac.webkit.org/changeset/228350>
Comment 4 WebKit Commit Bot 2018-02-09 17:46:10 PST
All reviewed patches have been landed.  Closing bug.