AX: Accessibility is not notified when a web process cancels the suspension https://bugs.webkit.org/show_bug.cgi?id=182659

Reviewed by Ryosuke Niwa.

We were notifying Accessibility with the web process suspended information in actualPrepareToSuspend
and processDidResume. However, the suspension can be canceled during the prepare call. So that we
should also post a notification in cancelPrepareToSuspend.

* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::cancelPrepareToSuspend):


Canonical link: https://commits.webkit.org/198478@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@228350 268f45cc-cd09-0410-ab3c-d52691b4dbfc